feat(resource): 集成Milvus向量存储优化投标文档生成
- 新增BidDocumentVectorService实现招标文件向量管理功能
- 在AI分析、评分标准、契合度分析完成后同步存储至Milvus向量库
- 重构投标文档生成服务实现双重RAG检索机制
- 移除BizBidProjectAttachment相关实体和映射器
- 使用SysOss替代原有附件存储方式获取招标文件信息
- 实现智能分块算法将文档内容按类型存储到Milvus
- 添加并行生成章节内容提升文档生成效率
- 支持按章节标题和文档类型进行向量检索